fixed game ui overflow on buttons and progress bar

--- a/frontend/src/components/Game/Game.scss
+++ b/frontend/src/components/Game/Game.scss
@@ -276,7 +276,7 @@
 
 @media only screen and (max-width: 500px) {
   .game-screen {
-    grid-template-rows: 50vh 35vh 2.5vh 2.5vh;
+    grid-template-rows: 50vh 38vh 2.5vh 2.5vh;
   }
 
   .artwork {
